# biocentral_server

./: .gitignore  Caddyfile  docker-compose.services.yml  pyproject.toml
biocentral_server/bayesian_optimization/: README.md  ReadMe.md  bayesian_optimization_endpoint.py  bayesian_optimization_task.py  botraining.py  gaussian_process.md  gaussian_process_models.py
biocentral_server/server_entrypoint/: __init__.py
services/: deploy_models.py  docker-compose.test.yml
services/embeddings-service/: Dockerfile  README.md  cache.py  main.py  pyproject.toml  test.py  test_isolated.py  triton_client.py
services/embeddings-service/src/embedding_service/: __init__.py  cache.py  config.py  download_storage.py  main.py  models.py  triton_client.py  utils.py
services/model-repository/: .gitignore  README.md
services/model-repository/_internal_esm2_t33_onnx/: config.pbtxt
services/model-repository/_internal_esm2_t33_onnx/1/: model.onnx
services/model-repository/_internal_esm2_t36_onnx/: config.pbtxt
services/model-repository/_internal_esm2_t36_onnx/1/: model.onnx
services/model-repository/_internal_esm2_tokenizer/1/: model.py
services/model-repository/_internal_onnx/: config.pbtxt
services/model-repository/_internal_prott5_onnx/: config.pbtxt
services/model-repository/_internal_prott5_onnx/1/: model.onnx  shared.weight
services/model-repository/_internal_prott5_tokenizer/1/: model.py
services/model-repository/_internal_tokenizer/: config.pbtxt
services/model-repository/bind_embed/: config.pbtxt
services/model-repository/conservation_model/: config.pbtxt
services/model-repository/disorder_ensemble/: config.pbtxt
services/model-repository/disorder_onnx/: config.pbtxt
services/model-repository/disorder_postprocess/1/: model.py
services/model-repository/light_attention_membrane/: config.pbtxt
services/model-repository/light_attention_membrane_disabled/: config.pbtxt
services/model-repository/prot_t5_pipeline/: config.pbtxt
services/model-repository/secondary_structure_model/: config.pbtxt
services/model-repository/seth_postprocess/: config.pbtxt
services/model-repository/subcellular_localization_model/: config.pbtxt
services/model-repository/tmbed/: config.pbtxt
services/model-repository/vespag/: config.pbtxt
services/prediction-service/: Dockerfile  README.md  client.py  main.py  models.py  pyproject.toml  triton_predictor.py
services/shared/: pyproject.toml  queue_manager.py
