[project]
name = "biocentral-server"
version = "0.2.5"
description = "Compute server for the biocentral frontend"
authors = [
    {name = "Sebastian Franz", email = "sebastian.franz@tum.de"},
    {name = "Tobias Olenyi", email = "tobias.olenyi@tum.de"},
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.11.9,<3.14"

dependencies = [
    # Backend
    "flask>=3.0.2,<4",
    "levenshtein>=0.26,<1",
    "taxoniq>=1.0,<2",
    "blosc2>=3.6,<4",
    "psycopg[binary]>=3.2,<4.0",
    "gunicorn>=23.0,<24",
    "rq>=2.1,<3.0",
    "python-dotenv>=1.0,<2.0.0",
    "gpytorch>=1.14,<2.0",
    "onnx>=1.18,<2.0",
    'onnxruntime>=1.22,<2.0; platform_system == "Darwin"',  # For MacOS
    'onnxruntime-gpu>=1.22,<2.0; platform_system != "Darwin"',     # For Linux/Windows with GPU

    # Git Dependencies
    #"biotrainer @ git+https://github.com/sacdallago/biotrainer.git@develop",
    "protspace @ git+https://github.com/tsenoner/protspace.git@v2.0.0",
    "hvi_toolkit @ git+https://github.com/SebieF/hvi_toolkit.git@maintenance/update-biotrainer",
    "vespag @ git+https://github.com/biocentral/VespaG.git@onnx-deployment",
    "tmbed @ git+https://github.com/biocentral/TMbed.git@onnx-deployment",
]

[dependency-groups]
dev = [
    "pytest==8.3.1",
    "pip-audit>=2.7.3,<3.0.0",
    "ruff>=0.12.1",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
