[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biocentral-embedding-service"
version = "0.1.0"
description = "ProtT5 embedding service with Triton gRPC and Redis caching"
requires-python = ">=3.11"

dependencies = [
    # FastAPI stack
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    
    # Triton client for gRPC communication
    "tritonclient[grpc]>=2.40.0,<3.0.0",
    
    # Core ML dependencies
    "numpy>=1.24.0,<2.0.0",
    
    # Redis for caching with compression
    "redis>=5.0.0,<6.0.0",
    "blosc2>=2.7.1,<3.0.0",  # Fast compression for embeddings
    
    # Queue management
    "rq>=2.1.0,<3.0.0",
    
    # Async HTTP client
    "httpx>=0.25.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

