[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biocentral-prediction-service"
version = "0.1.0" 
description = "Unified prediction service with ONNX models"
requires-python = ">=3.11"

dependencies = [
    # FastAPI stack
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    
    # Triton client for inference
    "tritonclient[grpc]>=2.40.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    
    # HTTP client for embedding service
    "httpx>=0.25.0,<1.0.0",
    
    # Redis for queues (no PostgreSQL needed)
    "redis>=5.0.0,<6.0.0",
    "rq>=2.1.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0", 
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

gpu = [
    "onnxruntime-gpu>=1.16.0,<2.0.0",
]

triton = [
    "tritonclient[http]>=2.40.0,<3.0.0",
]