[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biocentral-prediction-service"
version = "0.1.0" 
description = "Unified prediction service with ONNX models"
requires-python = ">=3.11"

dependencies = [
    # FastAPI stack
    "fastapi[standard]>=0.116,<1",
    "pydantic>=2.11,<3",
    
    # Triton client for gRPC communication
    "tritonclient[grpc]>=2.59,<3",
    
    # Core ML dependencies
    "numpy>=2.3,<3",
    
    # Redis for caching with compression
    "redis>=6.2,<7",
    "blosc2>=3.6,<4",  # Fast compression for embeddings
    
    # Queue management
    "rq>=2.4,<3",
    
    # Async HTTP client
    "httpx>=0.28,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.5",
]
