[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biocentral-shared"
version = "0.1.0"
description = "Shared utilities for biocentral services"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.5.0,<3.0.0",
    "redis>=5.0.0,<6.0.0",
    "rq>=2.1.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]